fixed bug #12167: Open / close explorer button should always be visible
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@46388 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -1057,9 +1057,9 @@ div.il_ExplorerItemDescription {
 }
 
 a.ilTreeView {
-	position: absolute;
+	position: fixed;
 	left: -2px;
-	top: 270px;
+	top: 130px;
 }
 
 a.ilTreeView:hover {
@@ -2634,7 +2634,7 @@ img.ilAreaClose {
 	cursor: pointer;
 }
 
-div.ilLeftNavSpace {
+.ilLeftNavSpace {
 	/* padding: 0 20px 0 310px; */
 	left: 310px !important;
 }
